--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ var tasks = [
     "label": "Placentia Bay / Grand Banks",
     "csv_id": 6
   }, {
+    "file": "geojson/NLUP_Boundary.geojson",
+    "label": "Nunavut",
+    "csv_id": 7
+  }, {
     "file": "geojson/florida_keys.geojson",
     "label": "Florida Keys",
     "csv_id": 18
