Add Great Lakes

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ var tasks = [
     "label": "Nunavut",
     "csv_id": 7
   }, {
+    "file": "geojson/great_lakes.geojson",
+    "label": "Great Lakes",
+    "csv_id": 8
+  }, {
     "file": "geojson/florida_keys.geojson",
     "label": "Florida Keys",
     "csv_id": 18
