Forgot to add the other files to last commit

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@ var tasks = [
     "label": "Great Lakes",
     "csv_id": 8
   }, {
+    "file": "geojson/pacific_islands.geojson",
+    "label": "Pacific Islands",
+    "csv_id": 12
+  }, {
+    "file": "geojson/us_caribbean.geojson",
+    "label": "US Caribbean",
+    "csv_id": 14
+  }, {
+    "file": "geojson/us_west_coast.geojson",
+    "label": "US West Coast",
+    "csv_id": 15
+  }, {
     "file": "geojson/florida_keys.geojson",
     "label": "Florida Keys",
     "csv_id": 18
