--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ var tasks = [
     "label": "Eastern Scotian Shelf",
     "csv_id": 2
   }, {
-    "file": "geojson/bc_mapp_subregions.geojson",
-    "label": "BC MAPP",
+    "file": "geojson/bc_mapp_north_coast.geojson",
+    "label": "BC MaPP North Coast",
     "csv_id": 3
   }, {
     "file": "geojson/LOMA_Pacific_North_Coast.geojson",
@@ -133,9 +133,21 @@ var tasks = [
     "label": "Hawaii Humpback Whale National Marine Sanctuary",
     "csv_id": 32
   }, {
+    "file": "geojson/bc_mapp_haida_gwaii.geojson",
+    "label": "BC MaPP Haida Gwaii",
+    "csv_id": 33
+  }, {
     "file": "geojson/LOMA_Gulf_of_Saint_Lawrence.geojson",
     "label": "Gulf of Saint Lawrence",
     "csv_id": 39
+  }, {
+    "file": "geojson/bc_mapp_central_coast.geojson",
+    "label": "BC MaPP Central Coast",
+    "csv_id": 40
+  }, {
+    "file": "geojson/bc_mapp_north_vancouver_island.geojson",
+    "label": "BC MaPP North Vancouver Island",
+    "csv_id": 41
   }
 ];
 
