Add shape for Washington, remove point

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@ var tasks = [
     "label": "Rhode Island",
     "csv_id": 25
   }, {
+    "file": "geojson/washington_state.geojson",
+    "label": "Washington State",
+    "csv_id": 31
+  }, {
     "file": "geojson/hi_humpback_sanctuary.geojson",
     "label": "Hawaii Humpback Whale National Marine Sanctuary",
     "csv_id": 32
