Add US South Atlantic

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@ var tasks = [
     "label": "Pacific Islands",
     "csv_id": 12
   }, {
+    "file": "geojson/south_atlantic.geojson",
+    "label": "South Atlantic US",
+    "csv_id": 13
+  }, {
     "file": "geojson/us_caribbean.geojson",
     "label": "US Caribbean",
     "csv_id": 14
