Teal. I like. Closes #23.

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@ d3.csv("csv/data.csv", function(csvdata) {
 
     function geojsonStyle(feature) {
       return {
-        color: '#f09',
-        opacity: 0.8,
-        fillColor: '#f09',
+        color: '#126063',
+        opacity: 0.6,
+        fillColor: '#126063',
         fillOpacity: 0.3,
-        weight:2
+        weight:1
       };
     }
 
@@ -209,10 +209,10 @@ d3.csv("csv/data.csv", function(csvdata) {
     // Create our marker style for layers represented only as points
     var geojsonMarkerOptions = {
         radius: 8,
-        fillColor: "steelblue",
-        color: "steelblue",
+        fillColor: "#126063",
+        color: "#126063",
         weight: 2,
-        opacity: 0.8,
+        opacity: 0.6,
         fillOpacity: 0.3
     };
 
