Collapse layers panel. It's only temporary anyway

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ d3.csv("csv/data.csv", function(csvdata) {
     });
 
     var options = {
-      collapsed: false
+      collapsed: true
     };
 
     L.control.layers(null, overlayMaps, options).addTo(map);
