Read shapes from one topojson instead of multiple geojsons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src='vendor/queue.v1.min.js'></script>
 <script src='vendor/proj4-compressed.js'></script>
 <script src='vendor/proj4leaflet.js'></script>
+<script src='vendor/topojson.v1.min.js'></script>
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -73,92 +74,114 @@ var map = L.map('map', {
 // This is awkward! Eventually we should store these geojson links in the csv
 var tasks = [
   {
+    "topojson_layer": "LOMA_Beaufort_Sea",
     "file": "geojson/LOMA_Beaufort_Sea.geojson",
     "label": "Beaufort Sea",
     "csv_id": 1
   }, {
+    "topojson_layer": "LOMA_Eastern_Scotian_Shelf",
     "file": "geojson/LOMA_Eastern_Scotian_Shelf.geojson",
     "label": "Eastern Scotian Shelf",
     "csv_id": 2
   }, {
+    "topojson_layer": "bc_mapp_north_coast",
     "file": "geojson/bc_mapp_north_coast.geojson",
     "label": "BC MaPP North Coast",
     "csv_id": 3
   }, {
+    "topojson_layer": "LOMA_Pacific_North_Coast",
     "file": "geojson/LOMA_Pacific_North_Coast.geojson",
     "label": "Pacific North Coast",
     "file2": "geojson/bc_pncima.geojson",
     "label2": "BC PNCIMA",
     "csv_id": 4
   }, {
+    "topojson_layer": "bc_wcvi",
     "file": "geojson/bc_wcvi.geojson",
     "label": "BC WCVI",
     "csv_id": 5
   }, {
+    "topojson_layer": "LOMA_Placentia_Bay___Grand_Banks",
     "file": "geojson/LOMA_Placentia_Bay___Grand_Banks.geojson",
     "label": "Placentia Bay / Grand Banks",
     "csv_id": 6
   }, {
+    "topojson_layer": "NLUP_Boundary",
     "file": "geojson/NLUP_Boundary.geojson",
     "label": "Nunavut",
     "csv_id": 7
   }, {
+    "topojson_layer": "great_lakes",
     "file": "geojson/great_lakes.geojson",
     "label": "Great Lakes",
     "csv_id": 8
   }, {
+    "topojson_layer": "pacific_islands",
     "file": "geojson/pacific_islands.geojson",
     "label": "Pacific Islands",
     "csv_id": 12
   }, {
+    "topojson_layer": "south_atlantic",
     "file": "geojson/south_atlantic.geojson",
     "label": "South Atlantic US",
     "csv_id": 13
   }, {
+    "topojson_layer": "us_caribbean",
     "file": "geojson/us_caribbean.geojson",
     "label": "US Caribbean",
     "csv_id": 14
   }, {
+    "topojson_layer": "us_west_coast",
     "file": "geojson/us_west_coast.geojson",
     "label": "US West Coast",
     "csv_id": 15
   }, {
+    "topojson_layer": "florida_keys",
     "file": "geojson/florida_keys.geojson",
     "label": "Florida Keys",
     "csv_id": 18
   }, {
+    "topojson_layer": "ma_coastalzone",
     "file": "geojson/ma_coastalzone.geojson",
     "label": "Massachusetts",
     "csv_id": 22
   }, {
+    "topojson_layer": "oregon",
     "file": "geojson/oregon.geojson",
     "label": "Oregon",
     "csv_id": 24
   }, {
+    "topojson_layer": "ri_coastalzone",
     "file": "geojson/ri_coastalzone.geojson",
     "label": "Rhode Island",
     "csv_id": 25
   }, {
+    "topojson_layer": "washington_state",
     "file": "geojson/washington_state.geojson",
     "label": "Washington State",
     "csv_id": 31
   }, {
+    "topojson_layer": "hi_humpback_sanctuary",
     "file": "geojson/hi_humpback_sanctuary.geojson",
     "label": "Hawaii Humpback Whale National Marine Sanctuary",
     "csv_id": 32
   }, {
+    "topojson_layer": "bc_mapp_haida_gwaii",
     "file": "geojson/bc_mapp_haida_gwaii.geojson",
     "label": "BC MaPP Haida Gwaii",
     "csv_id": 33
   }, {
+    "topojson_layer": "LOMA_Gulf_of_Saint_Lawrence",
     "file": "geojson/LOMA_Gulf_of_Saint_Lawrence.geojson",
     "label": "Gulf of Saint Lawrence",
     "csv_id": 39
   }, {
+    "topojson_layer": "bc_mapp_central_coast",
     "file": "geojson/bc_mapp_central_coast.geojson",
     "label": "BC MaPP Central Coast",
     "csv_id": 40
   }, {
+    "topojson_layer": "bc_mapp_north_vancouver_island",
     "file": "geojson/bc_mapp_north_vancouver_island.geojson",
     "label": "BC MaPP North Vancouver Island",
     "csv_id": 41
@@ -166,14 +189,13 @@ var tasks = [
 ];
 
 d3.csv("csv/data.csv", function(csvdata) {
-  var q = queue();
-  tasks.forEach(function(t) { q.defer(d3.json, t.file); });
-  q.awaitAll(function(error, results) {
+
+  d3.json("geojson/planning_areas.topojson", function(planning_areas_topojson) {
 
     // Apply the geojson objects to the tasks array
-    for(var i = 0; i < results.length; i++) {
-      tasks[i].geojson = results[i];
-    }
+    tasks.forEach(function(task) {
+      task.geojson = topojson.feature(planning_areas_topojson, planning_areas_topojson.objects[task.topojson_layer]);
+    });
 
     var overlayMaps = {};
     var markerList = []; // so we can iterate and change size
