--- a/index.html
+++ b/index.html
@@ -4,315 +4,37 @@
 <meta charset=utf-8 />
 <title>Moore Foundation map prototype by Stamen Design</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="css/pocketgrid.min.css">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src='vendor/leaflet.ajax.min.js'></script>
-<script src='vendor/d3.v3.min.js'></script>
-<script src='vendor/queue.v1.min.js'></script>
-<script src='vendor/proj4-compressed.js'></script>
-<script src='vendor/proj4leaflet.js'></script>
-<script src='vendor/topojson.v1.min.js'></script>
-<style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
-<body>
-<div id='map'></div>
-
-<script>
-
-function getRadiusByZoom(zoom) {
-  //return (Math.pow(2,zoom))/2; // base 2 keeps them same geographical size. Dividing by 2 makes that size smaller
-  return (Math.pow(1.7,zoom))/2; // base < 2 means they get bigger as you zoom, but not as big as the geography does
-}
-
-var crs = new L.Proj.CRS(
-    'EPSG:2163',  // Guessing
-    //'EPSG:3408', 
-    '+proj=laea +lat_0=40 +lon_0=-105 +x_0=0 +y_0=0 +datum=WGS84 +units=m +no_defs',
-    {
-        origin: [60112700,20037600], // I don't understand where these come from
-        resolutions: [
-            null, 
-            78271.51696484375,
-            39135.758482421875,
-            19567.8792412109375,
-            9783.93962060546875,
-            4891.969810302734375,
-            2445.9849051513671875,
-            1222.99245257568359375,
-            611.496226287841796875,
-            305.7481131439208984375,
-            152.87405657196044921875,
-            76.437028285980224609375,
-            38.2185141429901123046875,
-            19.10925707149505615234375,
-            9.554628535747528076171875,
-            4.7773142678737640380859375,
-            2.388657133934688201904296875,
-            1.194328566968441009521484375
-        ] // I just copied these from somewhere
+  <body>
+    <div class="container block">
+      <header class="nav block"></header>
+      <section class="main block">
+        <div id='map'></div>
+      </section>
+    </div>
 
 
-    }
-);
 
-var mapboxTiles = L.tileLayer('https://{s}.tiles.mapbox.com/v3/stamen.moore/{z}/{x}/{y}.png', {
-    attribution: ''
-});
+    <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script type="text/javascript" src='js/vendor/leaflet.ajax.min.js'></script>
+    <script type="text/javascript" src='js/vendor/d3.v3.min.js'></script>
+    <script type="text/javascript" src='js/vendor/queue.v1.min.js'></script>
+    <script type="text/javascript" src='js/vendor/proj4-compressed.js'></script>
+    <script type="text/javascript" src='js/vendor/proj4leaflet.js'></script>
+    <script type="text/javascript" src='js/vendor/topojson.v1.min.js'></script>
 
-var startZoom = 4;
-var map = L.map('map', { 
-      crs: crs,
-      continuousWorld: false,
-      worldCopyJump: false
-    })
-    .addLayer(mapboxTiles)
-    .setView([35, -105], startZoom);
+    <script type="text/javascript" src='js/MFOM.config.js'></script>
+    <script type="text/javascript" src='js/MFOM.data.js'></script>
+    <script type="text/javascript" src='js/MFOM.map.js'></script>
+    <script type="text/javascript" src='js/MFOM.main.js'></script>
 
-// This is awkward! Eventually we should store these geojson links in the csv
-var tasks = [
-  {
-    "topojson_layer": "LOMA_Beaufort_Sea",
-    "file": "geojson/LOMA_Beaufort_Sea.geojson",
-    "label": "Beaufort Sea",
-    "csv_id": 1
-  }, {
-    "topojson_layer": "LOMA_Eastern_Scotian_Shelf",
-    "file": "geojson/LOMA_Eastern_Scotian_Shelf.geojson",
-    "label": "Eastern Scotian Shelf",
-    "csv_id": 2
-  }, {
-    "topojson_layer": "bc_mapp_north_coast",
-    "file": "geojson/bc_mapp_north_coast.geojson",
-    "label": "BC MaPP North Coast",
-    "csv_id": 3
-  }, {
-    "topojson_layer": "LOMA_Pacific_North_Coast",
-    "file": "geojson/LOMA_Pacific_North_Coast.geojson",
-    "label": "Pacific North Coast",
-    "file2": "geojson/bc_pncima.geojson",
-    "label2": "BC PNCIMA",
-    "csv_id": 4
-  }, {
-    "topojson_layer": "bc_wcvi",
-    "file": "geojson/bc_wcvi.geojson",
-    "label": "BC WCVI",
-    "csv_id": 5
-  }, {
-    "topojson_layer": "LOMA_Placentia_Bay___Grand_Banks",
-    "file": "geojson/LOMA_Placentia_Bay___Grand_Banks.geojson",
-    "label": "Placentia Bay / Grand Banks",
-    "csv_id": 6
-  }, {
-    "topojson_layer": "NLUP_Boundary",
-    "file": "geojson/NLUP_Boundary.geojson",
-    "label": "Nunavut",
-    "csv_id": 7
-  }, {
-    "topojson_layer": "great_lakes",
-    "file": "geojson/great_lakes.geojson",
-    "label": "Great Lakes",
-    "csv_id": 8
-  }, {
-    "topojson_layer": "pacific_islands",
-    "file": "geojson/pacific_islands.geojson",
-    "label": "Pacific Islands",
-    "csv_id": 12
-  }, {
-    "topojson_layer": "south_atlantic",
-    "file": "geojson/south_atlantic.geojson",
-    "label": "South Atlantic US",
-    "csv_id": 13
-  }, {
-    "topojson_layer": "us_caribbean",
-    "file": "geojson/us_caribbean.geojson",
-    "label": "US Caribbean",
-    "csv_id": 14
-  }, {
-    "topojson_layer": "us_west_coast",
-    "file": "geojson/us_west_coast.geojson",
-    "label": "US West Coast",
-    "csv_id": 15
-  }, {
-    "topojson_layer": "florida_keys",
-    "file": "geojson/florida_keys.geojson",
-    "label": "Florida Keys",
-    "csv_id": 18
-  }, {
-    "topojson_layer": "ma_coastalzone",
-    "file": "geojson/ma_coastalzone.geojson",
-    "label": "Massachusetts",
-    "csv_id": 22
-  }, {
-    "topojson_layer": "oregon",
-    "file": "geojson/oregon.geojson",
-    "label": "Oregon",
-    "csv_id": 24
-  }, {
-    "topojson_layer": "ri_coastalzone",
-    "file": "geojson/ri_coastalzone.geojson",
-    "label": "Rhode Island",
-    "csv_id": 25
-  }, {
-    "topojson_layer": "washington_state",
-    "file": "geojson/washington_state.geojson",
-    "label": "Washington State",
-    "csv_id": 31
-  }, {
-    "topojson_layer": "hi_humpback_sanctuary",
-    "file": "geojson/hi_humpback_sanctuary.geojson",
-    "label": "Hawaii Humpback Whale National Marine Sanctuary",
-    "csv_id": 32
-  }, {
-    "topojson_layer": "bc_mapp_haida_gwaii",
-    "file": "geojson/bc_mapp_haida_gwaii.geojson",
-    "label": "BC MaPP Haida Gwaii",
-    "csv_id": 33
-  }, {
-    "topojson_layer": "LOMA_Gulf_of_Saint_Lawrence",
-    "file": "geojson/LOMA_Gulf_of_Saint_Lawrence.geojson",
-    "label": "Gulf of Saint Lawrence",
-    "csv_id": 39
-  }, {
-    "topojson_layer": "bc_mapp_central_coast",
-    "file": "geojson/bc_mapp_central_coast.geojson",
-    "label": "BC MaPP Central Coast",
-    "csv_id": 40
-  }, {
-    "topojson_layer": "bc_mapp_north_vancouver_island",
-    "file": "geojson/bc_mapp_north_vancouver_island.geojson",
-    "label": "BC MaPP North Vancouver Island",
-    "csv_id": 41
-  }
-];
-
-d3.csv("csv/data.csv", function(csvdata) {
-
-  d3.json("geojson/planning_areas.topojson", function(planning_areas_topojson) {
-
-    // Apply the geojson objects to the tasks array
-    tasks.forEach(function(task) {
-      task.geojson = topojson.feature(planning_areas_topojson, planning_areas_topojson.objects[task.topojson_layer]);
-    });
-
-    var overlayMaps = {};
-    var markerList = []; // so we can iterate and change size
-
-    // Create a popup function that we'll add to each layer
-    function popUp(feature, layer) {
-        if (feature && feature.hasOwnProperty("properties") && feature.properties && feature.properties.hasOwnProperty("Location")) {
-          var html = feature.properties.Location + "<br>" + feature.properties['Narrative (250, no formatting or links)'];
-        } else {
-          var html = "Location not found";
-        }
-        layer.bindPopup(html);
-    }
-
-
-    tasks.forEach(function(task) {
-      task.geojson.features.forEach(function(feature){
-        feature.properties = csvdata[task.csv_id-1]; // TODO: don't use index, use lookup
-      });
-    });
-
-    var geojsonPolyStyle = {
-      color: '#126063',
-      opacity: 0.6,
-      fillColor: '#126063',
-      fillOpacity: 0.3,
-      weight:1
-    };
-    var geojsonPolyHighlighted = {
-      color: '#0ff',
-      opacity: 0.6,
-      fillColor: '#0ff',
-      fillOpacity: 0.3,
-      weight:1
-    };
-
-    function geojsonStyle(feature) {
-      return geojsonPolyStyle;
-    }
-
-    tasks.sort(function(a, b) { return d3.ascending(+a.csv_id, +b.csv_id);}).forEach(function(task) {
-      task.layer = new L.GeoJSON(task.geojson, {style:geojsonStyle, onEachFeature:popUp});
-      map.addLayer(task.layer);
-      task.layer.on("mouseover", function (e) {
-        task.layer.setStyle(geojsonPolyHighlighted);
-      });
-      task.layer.on("mouseout", function (e) {
-        task.layer.setStyle(geojsonPolyStyle);
-      });
-      var label = task.geojson.features[0].properties.Location;
-      if (!label) label = "no shape";
-      overlayMaps[task.csv_id + ": " + label] = task.layer;
-    });
-
-    // Create our marker style for layers represented only as points
-    var geojsonMarkerOptions = {
-        fillColor: "#126063",
-        color: "#126063",
-        weight: 2,
-        opacity: 0.6,
-        fillOpacity: 0.3
-    };
-    var geojsonMarkerHighlighted = {
-        fillColor: "#0ff",
-        color: "#0ff",
-        weight: 2,
-        opacity: 0.6,
-        fillOpacity: 0.3
-    };
-
-    // Create point map layers for any rows that have lat & lon
-    csvdata.sort(function(a,b) { return d3.ascending(+a.ID, +b.ID);}).forEach(function(row) {
-      if (row.Latitude && row.Longitude) {
-        var layer = L.geoJson({
-          "type": "Feature",
-          "properties": row,
-          "geometry": {
-            "type": "Point",
-            "coordinates": [row.Longitude, row.Latitude]
-          }
-        }, {
-          pointToLayer: function(feature, latlng) {
-            var circleMarker = L.circleMarker(latlng, geojsonMarkerOptions);
-            markerList.push(circleMarker);
-            circleMarker.setRadius(getRadiusByZoom(startZoom));
-            return circleMarker;
-          },
-          onEachFeature: popUp
-        });
-        map.addLayer(layer);
-        layer.on("mouseover", function (e) {
-          layer.setStyle(geojsonMarkerHighlighted);
-        });
-        layer.on("mouseout", function (e) {
-          layer.setStyle(geojsonMarkerOptions);
-        });
-        overlayMaps[row.ID + ": " + row.Location] = layer;
-      }
-    });
-
-    var options = {
-      collapsed: true
-    };
-
-    L.control.layers(null, overlayMaps, options).addTo(map);
-
-    map.on('zoomend', function() {
-      var currentZoom = map.getZoom();
-      markerList.forEach(function(marker) {
-        marker.setRadius(getRadiusByZoom(currentZoom));
-        console.log(currentZoom, getRadiusByZoom(currentZoom));
-      });
-    });
-
-  });
-});
-
-</script>
-</body>
+    <script type="text/javascript">
+    //MFOM
+    </script>
+  </body>
 </html>
